--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header>
-      <div>a</div>
+      <div id="a">a</div>
     </header>
     <main>
-      <aside>b</aside>
+      <aside id="b">b</aside>
       <div id="c" class="cd">c</div>
       <div id="d" class="cd">d</div>
       <section id="section"> 
